[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Maksym1os <maksym.los.knm.2020.@edu.lpnu.ua>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
