[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["DanyloSarvasNulp <91377012+DanyloSarvasNulp@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
