[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["DanyloSarvasNulp <91377012+DanyloSarvasNulp@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
waitress = "^2.0.0"
alembic = "^1.7.4"
SQLAlchemy = "^1.4.26"
PyMySQL = "^1.0.2"
cryptography = "^35.0.0"
Flask-HTTPAuth = "^4.5.0"
bcrypt = "^3.2.0"
Flask-Bcrypt = "^0.7.1"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
